# dataops-observability

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .redocly.lint-ignore.yaml  .redocly.yaml  CONTRIBUTING.md  CONTRIBUTORS.md  NOTICE  README.md  conftest.py  dataops-observability-app-2.0.0.tgz  dataops-observability-app-2.1.0.tgz  dataops-observability-app-2.2.0.tgz  dataops-observability-app-2.2.1.tgz  dataops-observability-app-2.2.2.tgz  dataops-observability-app-2.2.3.tgz  dataops-observability-app-2.2.4.tgz  dataops-observability-app-2.3.0.tgz  dataops-observability-app-2.3.1.tgz  dataops-observability-app-2.4.0.tgz  dataops-observability-app-3.0.0.tgz  dataops-observability-app-3.0.1.tgz  dataops-observability-app-3.0.2.tgz  dataops-observability-services-2.0.0.tgz  dataops-observability-services-2.0.1.tgz  dataops-observability-services-2.0.2.tgz  dataops-observability-services-2.0.3.tgz  dataops-observability-services-3.0.1.tgz  index.yaml  pyproject.toml  setup.cfg  tasks.py
.github/actions/: publish_charts.yaml
.github/workflows/: release.yaml
agent_api/: app.py
agent_api/config/: cloud.py  defaults.py  local.py  minikube.py  test.py
agent_api/helpers/: health.py
agent_api/routes/: __init__.py  v1_routes.py
agent_api/schemas/: __init__.py  heartbeat.py
benchmark/: README.md  cached_property.py  requirements.txt
cli/: README.md  __init__.py  __main__.py  base.py  lib.py
cli/entry_points/: database_schema.py  dump_fixture.py  gen_events.py  graph_schema.py  init.py  load_fixture.py  migration_check.py  service_account_key.py  shell.py  yoyo.py
cli/graph_templates/: body.html  head.html  rel.html
cli/tests/: test_imports.py  test_lib.py
common/: agent.py  apscheduler_extensions.py  argparse.py  datetime_utils.py  decorators.py  hash.py  join_helpers.py  json_encoder.py  messagepack.py  model.py  plugins.py  sentinel.py  typing.py  validate_decorators_type_inference.pyi
common/actions/: action.py  action_factory.py  data_points.py  send_email_action.py  webhook_action.py
common/api/: base_view.py  request_parsing.py  search_view.py
common/auth/: permissions.py
common/constants/: __init__.py  defaults.py  email_templates.py  peewee.py  rbac.py  schema_limits.py  schema_validation.py  validation_messages.py
common/email/: email_renderer.py  email_service.py
common/entities/: __init__.py  action.py  agent.py  alert.py  auth_provider.py  authentication.py  base_entity.py  company.py  component.py  component_meta.py  dataset.py  dataset_operation.py  event.py  instance.py  instance_rule.py  journey.py  organization.py  pipeline.py  project.py  rule.py  run.py  schedule.py  server.py  streaming_pipeline.py  task.py  test_outcome.py  testgen.py  upcoming_instance.py  user.py
common/entity_services/: __init__.py  agent_service.py  company_service.py  component_service.py  event_service.py  instance_dag_service.py  instance_service.py  journey_service.py  organization_service.py  pipeline_service.py  project_service.py  run_service.py  sa_key_service.py  test_outcome_service.py  upcoming_instance_service.py  user_service.py
common/events/: __init__.py  base.py  converters.py  enums.py  event_handler.py
common/exceptions/: service.py
common/kafka/: __init__.py  admin.py  consumer.py  errors.py  message.py  producer.py  settings.py  topic.py
common/kubernetes/: __init__.py  readiness_probe.py
common/logging/: __init__.py  json_logging.py
common/peewee_extensions/: fields.py  fixtures.py
common/predicate_engine/: _operators.py  exceptions.py  query.py
common/schemas/: action_schemas.py  filter_schemas.py
common/user_strings/: alert_descriptions.py
conf/: __init__.py  cloud.py  defaults.py  local.py  minikube.py  test.py
deploy/: generate_swagger_spec.py  promote_branch.sh  search_view_plugin.py  subcomponent_plugin.py
deploy/charts_values/: values-app-dev.yaml  values-services-dev.yaml
deploy/conf/: gunicorn.conf.py  supervisord.conf  yoyo.ini
deploy/docker/: docker-bake.json  observability-be.dockerfile  observability-ui.dockerfile
deploy/docker-compose/: README.md  compose.yaml  config.env
deploy/migrations/: 20240605_01_vjN7f-initial-schema.rollback.sql  20240605_01_vjN7f-initial-schema.sql  20240627_01_bgIWR-adding-agent-status-column.py  20240627_02_ORQ6B-adding-agent-status-check-config-column.py  20240627_03_4o7tH-agent-status-check-default-values.py  20240701_01_zRe7i-add-project-alert-config-field.py  20240705_01_37l4A-set-project-alert-config-default.py  20240723_01_K3c3Q-renaming-the-agent-check-interval-column.py  20260318_01_pQ7mR-add-journey-component-pattern-columns.py
deploy/pages/: deploy-pages.py  index.html
deploy/pipeline/: README.md  pipeline-container.dockerfile
event_api/: app.py
event_api/config/: cloud.py  defaults.py  minikube.py  test.py
event_api/helpers/: health.py
event_api/routes/: __init__.py  v1_routes.py  v2_routes.py
fixtures/: README.md
observability_api/: README.md  app.py
observability_api/config/: cloud.py  defaults.py  local.py  minikube.py  test.py
observability_api/endpoints/: component_view.py  entity_view.py
observability_api/helpers/: health.py
observability_api/routes/: __init__.py  v1_routes.py
observability_api/schemas/: __init__.py  action_schemas.py  agent_schemas.py  alert_schemas.py  base_schemas.py  company_schemas.py  component_schemas.py  rule_schemas.py  (+20 more)
observability_ui/: .editorconfig  .eslintrc.json  README.md  config-observability-docker.sh  jest.config.ts  lerna.json  lighthouserc.js  migrations.json  nginx.conf  nx.json  package.json  tsconfig.base.json
rules_engine/: __init__.py  __main__.py  data_points.py  engine.py  journey_rules.py  lib.py  project_rules.py  rule_data.py  rules.py  typing.py
run_manager/: __main__.py  alerts.py  context.py  run_manager.py
scheduler/: __main__.py  agent_check.py  agent_status.py  component_expectations.py  instance_expectations.py  schedule_source.py
scripts/: check-docker-extensions.py  check-tests-are-marked.py
subcommand/: README.md  __init__.py  subcmd.py
testlib/: peewee.py
(+1197 files in other folders)
